--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -1,87 +1,118 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
 
 /*
-	Strata by HTML5 UP
+	Big Picture by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Button */
+/* Section/Article */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	.button {
-		position: relative;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
+	section > .last-child,
+	article > .last-child,
+	section.last-child,
+	article.last-child {
+		margin-bottom: 0;
 	}
 
 /* Form */
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea {
-		position: relative;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-	}
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select {
-		height: _size(element-height);
-		line-height: _size(element-height);
-	}
-
-	input[type="checkbox"],
-	input[type="radio"] {
-		& + label {
-			&:before {
-				display: none;
-			}
-		}
-	}
-
-/* Image */
-
-	.image {
-		position: relative;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-
-		&:before, &:after {
-			display: none !important;
-		}
-
-		img {
+	form {
+		input[type="text"],
+		input[type="email"],
+		input[type="password"],
+		select,
+		textarea {
 			position: relative;
 			-ms-behavior: url('assets/js/ie/PIE.htc');
+			border: solid 1px #ccc;
 		}
 	}
 
-/* Header */
+/* Button */
 
-	#header {
-		background-image: url('../../images/bg.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
+	input[type="button"],
+	input[type="submit"],
+	input[type="reset"],
+	.button,
+	button {
+		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+
+		&.down {
+			text-indent: 0;
+		}
+	}
+
+/* Intro */
+
+	#intro {
 		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+		background: url('../../images/intro.jpg');
+		background-size: cover;
 
-		h1 {
-			color: _palette(accent2, fg-bold);
+		.content {
+			position: relative;
+			z-index: 1;
+		}
+
+		&:after {
+			content: '';
+			background: url('images/overlay.png');
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
 		}
 	}
 
-/* Footer */
+/* One */
 
-	#footer {
-		.icons {
-			a {
-				color: _palette(accent2, fg-bold);
-			}
+	#one {
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+		background: url('../../images/one.jpg');
+		background-size: cover;
+
+		.content {
+			position: relative;
+			z-index: 1;
+		}
+
+		&.left:before,
+		&.right:after {
+			content: '';
+			background: url('images/overlay.png');
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+		}
+	}
+
+/* Two */
+
+	#two {
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+		background: url('../../images/two.jpg');
+		background-size: cover;
+
+		.content {
+			position: relative;
+			z-index: 1;
+		}
+
+		&.left:before,
+		&.right:after {
+			content: '';
+			background: url('images/overlay.png');
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
 		}
 	}
